--- a/src/lbcamden/overrides/_typography.scss
+++ b/src/lbcamden/overrides/_typography.scss
@@ -65,6 +65,5 @@ body {
 }
 
 :root, * {
-  font-family: "Inter", arial, sans-serif;
-  font-feature-settings: 'liga' 1, 'calt' 1, 'ss02' 1;
+  font-family: "Inter", Arial, sans-serif;
 }
