--- a/src/lbcamden/settings/_govuk-overrides.scss
+++ b/src/lbcamden/settings/_govuk-overrides.scss
@@ -6,7 +6,7 @@ $button-shadow-size: 2;
 
 $govuk-canvas-background-colour: lbcamden-colour("govuk-bg-dark1-colour");
 
-$govuk-font-family: "Inter", arial, sans-serif !default;
+$govuk-font-family: "Inter", Arial, sans-serif !default;
 $govuk-global-styles: true; // Applies styles to entire site eg. p and ul
 
 $govuk-page-width: 1170px;
@@ -43,8 +43,8 @@ $govuk-breakpoints: (
 @media print {
   body{
     print-color-adjust: exact;
-    font-family: $govuk-font-family;
   }
+
   a[href]:after {
 		content: ' (' attr(href) ')';
 	}
